<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unbore</string>
    <string name="next">NEXT</string>
    <string name="welcome_text_greeting">Welcome to Unbore!</string>
    <string name="welcome_text_quote">Say goodbye to boredom and discover new activities that spark your interests!</string>
    <string name="welcome_text_btn">Let\'s get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_top_text">What do you feel like?</string>
    <string name="act_type_social">Socializing</string>
    <string name="act_type_busywork">Busy work</string>
    <string name="act_type_recreational">Recreation</string>
    <string name="act_type_education">Education</string>
    <string name="continue_sign">Continue</string>
    <string name="pref_selection_tv">I feel like…</string>
    <string name="test_string">Listen to music you haven\'t heard in a while</string>
    <string name="next_idea">New Idea</string>
</resources>